--- a/claridad-empresaria/index.html
+++ b/claridad-empresaria/index.html
@@ -3,6 +3,7 @@
 	
 		<head>
 			<title> Claridad Empresaria</title>
+			<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
 			<link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
 			<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 			<link href="css/bootstrap.min.css" rel="stylesheet"/>
