--- a/claridad-empresaria/mision.html
+++ b/claridad-empresaria/mision.html
@@ -3,6 +3,7 @@
 	
 		<head>
 			<title> Claridad Empresaria</title>
+			<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 			<link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
 			<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 			<link href="css/bootstrap.min.css" rel="stylesheet"/>
@@ -22,10 +23,10 @@
 							</div>
 							<ul class="nav navbar-nav navbar-right">
 								<li><a href="index.html">Inicio</a></li>
-								<li><a href="vision.html">Visi髇</a></li>
-								<li><a href="mision.html">Misi髇</a></li>
+								<li><a href="vision.html">Visi贸n</a></li>
+								<li><a href="mision.html">Misi贸n</a></li>
 								<li><a href="nuestros-servicios.html">Nuestros servicios</a></li>
-								<li><a href="reingenieria.html">Reingenier韆</a></li>
+								<li><a href="reingenieria.html">Reingenier铆a</a></li>
 								<li><a href="contacto.html">Contacto</a></li>
 							</ul>
 						</div>
@@ -56,15 +57,15 @@
 							<div class="row">
 								<div class="col-md-3">
 								<img src="https://image.flaticon.com/icons/svg/149/149347.svg" class="img-responsive center-block icono"/>
-								<p>Desarrollar planes estrat間icos a nivel de organismos y empresas que se ajusten a las pol韙icas econ髆icas y sociales fijadas en el plano nacional.</p>
+								<p>Desarrollar planes estrat茅gicos a nivel de organismos y empresas que se ajusten a las pol铆ticas econ贸micas y sociales fijadas en el plano nacional.</p>
 								</div>
 								<div class="col-md-3">
 								<img src="https://image.flaticon.com/icons/svg/134/134654.svg" class="img-responsive center-block icono"/>
-								<p>Propender al crecimiento  de las econom韆s regionales a trav閟 de la sustentabilidad de las empresas.</p>
+								<p>Propender al crecimiento  de las econom铆as regionales a trav茅s de la sustentabilidad de las empresas.</p>
 								</div>
 								<div class="col-md-3">
 								<img src="https://image.flaticon.com/icons/svg/134/134659.svg" class="img-responsive center-block icono"/>
-								<p>Mejorar la empleabilidad  en la regi髇 a trav閟  de la capacitaci髇 sist閙ica</p>
+								<p>Mejorar la empleabilidad  en la regi贸n a trav茅s  de la capacitaci贸n sist茅mica</p>
 								</div>
 								<div class="col-md-3">
 								<img src="https://image.flaticon.com/icons/svg/134/134586.svg" class="img-responsive center-block icono"/>
