--- a/claridad-empresaria/nuestros-servicios.html
+++ b/claridad-empresaria/nuestros-servicios.html
@@ -3,6 +3,7 @@
 	
 		<head>
 			<title> Claridad Empresaria</title>
+			<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 			<link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
 			<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 			<link href="css/bootstrap.min.css" rel="stylesheet"/>
@@ -22,10 +23,10 @@
 							</div>
 							<ul class="nav navbar-nav navbar-right">
 								<li><a href="index.html">Inicio</a></li>
-								<li><a href="vision.html">VisiÛn</a></li>
-								<li><a href="mision.html">MisiÛn</a></li>
+								<li><a href="vision.html">Visi√≥n</a></li>
+								<li><a href="mision.html">Misi√≥n</a></li>
 								<li><a href="nuestros-servicios.html">Nuestros servicios</a></li>
-								<li><a href="reingenieria.html">ReingenierÌa</a></li>
+								<li><a href="reingenieria.html">Reingenier√≠a</a></li>
 								<li><a href="contacto.html">Contacto</a></li>
 							</ul>
 						</div>
@@ -54,9 +55,9 @@
 							<h1>Nuestros servicios</h1>
 								<div class="row">
 									<div class="col-md-12">
-										<p>En un escenario en permanente evoluciÛn influenciado por factores externos e internos, es muy probable que aquellas organizaciones que no cuenten con una cultura que facilite una permanente actualizaciÛn, fracasen.</p>
-										<p>PodrÌamos denominar a este atributo la ìDin·mica del Cambioî. </p>
-										<p>Pero estos cambios, esta evoluciÛn permanente, requiere de una sistematizaciÛn para lograr una inserciÛn natural en las empresas.</p>
+										<p>En un escenario en permanente evoluci√≥n influenciado por factores externos e internos, es muy probable que aquellas organizaciones que no cuenten con una cultura que facilite una permanente actualizaci√≥n, fracasen.</p>
+										<p>Podr√≠amos denominar a este atributo la ‚ÄúDin√°mica del Cambio‚Äù. </p>
+										<p>Pero estos cambios, esta evoluci√≥n permanente, requiere de una sistematizaci√≥n para lograr una inserci√≥n natural en las empresas.</p>
 									</div>
 								</div>
 						</div>
@@ -66,8 +67,8 @@
 							<h1>Estrategia</h1>
 								<div class="row">
 									<div class="col-md-12">
-										<p>En este contexto de cambio permanente, donde las decisiones polÌticas a nivel mundial y local tienen directa incidencia sobre las variables econÛmicas y financieras y donde la constante evoluciÛn tecnolÛgica hace que queden obsoletos r·pidamente (ciclo de vida) los productos y servicios que ofrecemos y la modalidad empleada para fabricar y comercializar el producto-servicio, resulta imprescindible tener un conocimiento pleno del mercado en el cual nos movemos.</p>
-										<p>De cada uno de sus integrantes, la competencia directa o potencial, las variables crÌticas del negocio, y, fundamentalmente una foto precisa de la evoluciÛn de la empresa y su estado actual como punto de partida para su optimizaciÛn.</p>
+										<p>En este contexto de cambio permanente, donde las decisiones pol√≠ticas a nivel mundial y local tienen directa incidencia sobre las variables econ√≥micas y financieras y donde la constante evoluci√≥n tecnol√≥gica hace que queden obsoletos r√°pidamente (ciclo de vida) los productos y servicios que ofrecemos y la modalidad empleada para fabricar y comercializar el producto-servicio, resulta imprescindible tener un conocimiento pleno del mercado en el cual nos movemos.</p>
+										<p>De cada uno de sus integrantes, la competencia directa o potencial, las variables cr√≠ticas del negocio, y, fundamentalmente una foto precisa de la evoluci√≥n de la empresa y su estado actual como punto de partida para su optimizaci√≥n.</p>
 									</div>
 								</div>
 						</div>
@@ -77,8 +78,8 @@
 							<h1>Gestion</h1>
 								<div class="row">
 									<div class="col-md-12">
-										<p>En este contexto de cambio permanente, donde las decisiones polÌticas a nivel mundial y local tienen directa incidencia sobre las variables econÛmicas y financieras y donde la constante evoluciÛn tecnolÛgica hace que queden obsoletos r·pidamente (ciclo de vida) los productos y servicios que ofrecemos y la modalidad empleada para fabricar y comercializar el producto-servicio, resulta imprescindible tener un conocimiento pleno del mercado en el cual nos movemos.</p>
-										<p>De cada uno de sus integrantes, la competencia directa o potencial, las variables crÌticas del negocio, y, fundamentalmente una foto precisa de la evoluciÛn de la empresa y su estado actual como punto de partida para su optimizaciÛn.</p>
+										<p>En este contexto de cambio permanente, donde las decisiones pol√≠ticas a nivel mundial y local tienen directa incidencia sobre las variables econ√≥micas y financieras y donde la constante evoluci√≥n tecnol√≥gica hace que queden obsoletos r√°pidamente (ciclo de vida) los productos y servicios que ofrecemos y la modalidad empleada para fabricar y comercializar el producto-servicio, resulta imprescindible tener un conocimiento pleno del mercado en el cual nos movemos.</p>
+										<p>De cada uno de sus integrantes, la competencia directa o potencial, las variables cr√≠ticas del negocio, y, fundamentalmente una foto precisa de la evoluci√≥n de la empresa y su estado actual como punto de partida para su optimizaci√≥n.</p>
 									</div>
 								</div>
 						</div>
