--- a/claridad-empresaria/reingenieria.html
+++ b/claridad-empresaria/reingenieria.html
@@ -3,6 +3,7 @@
 	
 		<head>
 			<title> Claridad Empresaria</title>
+			<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 			<link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
 			<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 			<link href="css/bootstrap.min.css" rel="stylesheet"/>
@@ -21,12 +22,12 @@
 								<a class="navbar-brand navbar-left media-object" href="#">Claridad</a>
 							</div>
 							<ul class="nav navbar-nav navbar-right">
-								<li><a href="#">Inicio</a></li>
-								<li><a href="#">Visión</a></li>
-								<li><a href="#">Gestión</a></li>
-								<li><a href="#">Nuestros servicios</a></li>
-								<li><a href="#">Reingeniería</a></li>
-								<li><a href="#">Contacto</a></li>
+								<li><a href="index.html">Inicio</a></li>
+								<li><a href="vision.html">VisiÃ³n</a></li>
+								<li><a href="mision.html">MisiÃ³n</a></li>
+								<li><a href="nuestros-servicios.html">Nuestros servicios</a></li>
+								<li><a href="reingenieria.html">ReingenierÃ­a</a></li>
+								<li><a href="contacto.html">Contacto</a></li>
 							</ul>
 						</div>
 					</nav>
@@ -52,19 +53,19 @@
 					</div>
 					<div class="row">
 						<div class="col-md-12 quienes-somos">
-							<h1>¿Quienes somos?</h1>
+							<h1>Â¿Quienes somos?</h1>
 							<p>
 								Somos un grupo de profesionales con vasta experiencia en empresas privadas y estatales que participaron activamente en las sucesivas modificaciones que se produjeron en las mismas, como producto de condicionamientos externos y necesidades internas.
 							</p>
 							<p>
-						Nos animamos a dar este paso porque pasamos por el mejor de los aprendizajes, el de reconocer los errores, para no volver a repetirlos, y el de los aciertos para aplicar las mejores prácticas.
+						Nos animamos a dar este paso porque pasamos por el mejor de los aprendizajes, el de reconocer los errores, para no volver a repetirlos, y el de los aciertos para aplicar las mejores prÃ¡cticas.
 							</p>
 							
 							<p>
-								Nadie mejor que usted para conocer las dificultades por las que está atravesando su empresa. Seguramente son múltiples los motivos disparadores de los problemas y usted seguramente tendrá en mente en que lugar del mercado le gustaría ubicarse en el mediano plazo.
+								Nadie mejor que usted para conocer las dificultades por las que estÃ¡ atravesando su empresa. Seguramente son mÃºltiples los motivos disparadores de los problemas y usted seguramente tendrÃ¡ en mente en que lugar del mercado le gustarÃ­a ubicarse en el mediano plazo.
 							</p>
 							<p>
-								Con esa visión y un análisis detallado del producto/servicio ofrecido, de los procesos comerciales operativos, de los recursos humanos y tecnológicos de la cultura empresaria como factor indispensable para todo proceso de cambio y mejora continua, nos ofrecemos a trabajar con usted para trazar el mapa de mejoras que permita llegar al punto deseado en el menor tiempo y al menor costo posible.
+								Con esa visiÃ³n y un anÃ¡lisis detallado del producto/servicio ofrecido, de los procesos comerciales operativos, de los recursos humanos y tecnolÃ³gicos de la cultura empresaria como factor indispensable para todo proceso de cambio y mejora continua, nos ofrecemos a trabajar con usted para trazar el mapa de mejoras que permita llegar al punto deseado en el menor tiempo y al menor costo posible.
 							</p>
 						</div>
 					</div>
