--- a/claridad-empresaria/contacto.html
+++ b/claridad-empresaria/contacto.html
@@ -22,12 +22,12 @@
 								<a class="navbar-brand navbar-left media-object" href="#">Claridad</a>
 							</div>
 							<ul class="nav navbar-nav navbar-right">
-								<li><a href="#">Inicio</a></li>
-								<li><a href="#">Visión</a></li>
-								<li><a href="#">Gestión</a></li>
-								<li><a href="#">Nuestros servicios</a></li>
-								<li><a href="#">Reingeniería</a></li>
-								<li><a href="#">Contacto</a></li>
+								<li><a href="index.html">Inicio</a></li>
+								<li><a href="vision.html">Visión</a></li>
+								<li><a href="gestion.html">Gestión</a></li>
+								<li><a href="nuestros-servicios.html">Nuestros servicios</a></li>
+								<li><a href="reingenieria.html">Reingeniería</a></li>
+								<li><a href="contacto.html">Contacto</a></li>
 							</ul>
 						</div>
 					</nav>
