--- a/claridad-empresaria/vision.html
+++ b/claridad-empresaria/vision.html
@@ -3,6 +3,7 @@
 	
 		<head>
 			<title> Claridad Empresaria</title>
+			<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 			<link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
 			<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 			<link href="css/bootstrap.min.css" rel="stylesheet"/>
@@ -23,10 +24,10 @@
 							</div>
 							<ul class="nav navbar-nav navbar-right">
 								<li><a href="index.html">Inicio</a></li>
-								<li><a href="vision.html">Visión</a></li>
-								<li><a href="mision.html">Misión</a></li>
+								<li><a href="vision.html">VisiÃ³n</a></li>
+								<li><a href="mision.html">MisiÃ³n</a></li>
 								<li><a href="nuestros-servicios.html">Nuestros servicios</a></li>
-								<li><a href="reingenieria.html">Reingeniería</a></li>
+								<li><a href="reingenieria.html">ReingenierÃ­a</a></li>
 								<li><a href="contacto.html">Contacto</a></li>
 							</ul>
 						</div>
@@ -34,7 +35,7 @@
 				</div>
 <!--SUBTITULO-->
 				<div class="container" id="subtitulo">
-					<h1>Nosotros lo <span id="asesoramos">acompañamos</span></h1>
+					<h1>Nosotros lo <span id="asesoramos">acompaÃ±amos</span></h1>
 				</div>
 			</div>
 
@@ -54,9 +55,9 @@
 					</div>
 					<div class="row">
 						<div class="col-md-12 quienes-somos">
-							<h1>Nuestra visión</h1>
+							<h1>Nuestra visiÃ³n</h1>
 							<p>
-								Posicionarnos como referentes de organismos y empresas para acompañarlos en la búsqueda de la eficiencia y el crecimiento sustentable, en el orden nacional y de países latinoamericanos.
+								Posicionarnos como referentes de organismos y empresas para acompaÃ±arlos en la bÃºsqueda de la eficiencia y el crecimiento sustentable, en el orden nacional y de paÃ­ses latinoamericanos.
 							</p>
 						</div>
 					</div>
