--- a/claridad-empresaria/contacto.html
+++ b/claridad-empresaria/contacto.html
@@ -24,7 +24,7 @@
 							<ul class="nav navbar-nav navbar-right">
 								<li><a href="index.html">Inicio</a></li>
 								<li><a href="vision.html">Visión</a></li>
-								<li><a href="gestion.html">Gestión</a></li>
+								<li><a href="mision.html">Misión</a></li>
 								<li><a href="nuestros-servicios.html">Nuestros servicios</a></li>
 								<li><a href="reingenieria.html">Reingeniería</a></li>
 								<li><a href="contacto.html">Contacto</a></li>
