--- a/curriculum/index.html
+++ b/curriculum/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Freelancer - Start Bootstrap Theme</title>
+    <title>Curriculum - Lautaro Bermejo</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -71,7 +71,7 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/cabin.png" alt="">
+              <img class="img-fluid" src="img/portfolio/claridad.png" alt="">
             </a>
           </div>
           <div class="col-sm-4 portfolio-item">
@@ -230,33 +230,27 @@
         <div class="modal-content">
           <div class="container">
             <div class="row">
-              <div class="col-lg-8 mx-auto">
+              <div class="col-lg-10 mx-auto">
                 <div class="modal-body">
-                  <h2>Project Title</h2>
+                  <h2>Claridad Empresaria</h2>
                   <hr class="star-primary">
-                  <img class="img-fluid img-centered" src="img/portfolio/cabin.png" alt="">
-                  <p>Use this area of the page to describe your project. The icon above is part of a free icon set by
-                    <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                  <img class="img-fluid img-centered" src="img/portfolio/claridad.png" alt="">
+                  <p>Página estatica para una consultora Argentina.</p>
                   <ul class="list-inline item-details">
-                    <li>Client:
+                    <li>Fecha:
                       <strong>
-                        <a href="http://startbootstrap.com">Start Bootstrap</a>
+                        <a href="http://startbootstrap.com">Julio 2016</a>
                       </strong>
                     </li>
-                    <li>Date:
+                    <li>Servicio:
                       <strong>
-                        <a href="http://startbootstrap.com">April 2014</a>
-                      </strong>
-                    </li>
-                    <li>Service:
-                      <strong>
-                        <a href="http://startbootstrap.com">Web Development</a>
+                        <a href="http://startbootstrap.com">Página Web</a>
                       </strong>
                     </li>
                   </ul>
                   <button class="btn btn-success" type="button" data-dismiss="modal">
                     <i class="fa fa-times"></i>
-                    Close</button>
+                    Cerrar</button>
                 </div>
               </div>
             </div>
@@ -355,7 +349,7 @@
     <script src="js/contact_me.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="js/freelancer.min.js"></script>
+    <script src="js/freelancer.js"></script>
 
   </body>
 
