--- a/curriculum/index.html
+++ b/curriculum/index.html
@@ -223,14 +223,14 @@
         <i class="fa fa-chevron-up"></i>
       </a>
     </div>
-
+	
     <!-- Portfolio Modals -->
     <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="container">
             <div class="row">
-              <div class="col-lg-10 mx-auto">
+              <div class="col-lg-10 col-sm-12 col-xs-12 mx-auto">
                 <div class="modal-body">
                   <h2>Claridad Empresaria</h2>
                   <hr class="star-primary">
