--- a/ricardo-vive/index.html
+++ b/ricardo-vive/index.html
@@ -15,6 +15,42 @@
 
       <div class="button-container">
         <div class="button"></div>
+        <audio src="sounds/saca-la-mano-de-ahi-carajo.mp3"></audio>
+        <div class="button-caption">MAMA SACA LA MANO DE AHI CARAJO</div>
+      </div>
+
+      <div class="button-container">
+        <div class="button"></div>
+        <audio src="sounds/cutucuchillo.mp3"></audio>
+        <div class="button-caption">CUTUCUCHILLO</div>
+      </div>
+
+      <div class="button-container">
+        <div class="button"></div>
+        <audio src="sounds/cortaste-toda-la-looz.mp3"></audio>
+        <div class="button-caption">MAMA CORTASTE TODA LA LOOZ</div>
+      </div>
+
+      <div class="button-container">
+        <div class="button"></div>
+        <audio src="sounds/fort-maiame.mp3"></audio>
+        <div class="button-caption">MAIAMEE</div>
+      </div>
+
+      <div class="button-container">
+        <div class="button"></div>
+        <audio src="sounds/fort-maiame.mp3"></audio>
+        <div class="button-caption">MAMA CORTASTE TODA LA LOOZ</div>
+      </div>
+
+      <div class="button-container">
+        <div class="button"></div>
+        <audio src="sounds/fort-maiame.mp3"></audio>
+        <div class="button-caption">MAIAMEE</div>
+      </div>
+
+      <div class="button-container">
+        <div class="button"></div>
         <audio src="sounds/fort-maiame.mp3"></audio>
         <div class="button-caption">MAMA CORTASTE TODA LA LOOZ</div>
       </div>
@@ -42,7 +78,7 @@
         <audio src="sounds/fort-maiame.mp3"></audio>
         <div class="button-caption">MAMA CORTASTE TODA LA LOOZ</div>
       </div>
-      
+
   </main>
   <script src="scripts.js"></script>
   </body>
