Actualice index.html y agregue mas botones

--- a/ricardo-vive/index.html
+++ b/ricardo-vive/index.html
@@ -9,74 +9,44 @@
 
       <div class="button-container">
         <div class="button"></div>
-        <audio src="sounds/fort-maiame.mp3"></audio>
+        <audio src="sounds/fort/maiame.mp3"></audio>
         <div class="button-caption">MAIAMEE</div>
       </div>
 
       <div class="button-container">
         <div class="button"></div>
-        <audio src="sounds/saca-la-mano-de-ahi-carajo.mp3"></audio>
+        <audio src="sounds/fort/saca-la-mano-de-ahi-carajo.mp3"></audio>
         <div class="button-caption">MAMA SACA LA MANO DE AHI CARAJO</div>
       </div>
 
       <div class="button-container">
         <div class="button"></div>
-        <audio src="sounds/cutucuchillo.mp3"></audio>
+        <audio src="sounds/fort/cutucuchillo.mp3"></audio>
         <div class="button-caption">CUTUCUCHILLO</div>
       </div>
 
       <div class="button-container">
         <div class="button"></div>
-        <audio src="sounds/cortaste-toda-la-looz.mp3"></audio>
+        <audio src="sounds/fort/cortaste-toda-la-looz.mp3"></audio>
         <div class="button-caption">MAMA CORTASTE TODA LA LOOZ</div>
       </div>
 
       <div class="button-container">
         <div class="button"></div>
-        <audio src="sounds/fort-maiame.mp3"></audio>
-        <div class="button-caption">MAIAMEE</div>
+        <audio src="sounds/fort/desenchufalo.mp3"></audio>
+        <div class="button-caption">DE-DE-DESENCHUFALO</div>
       </div>
 
       <div class="button-container">
         <div class="button"></div>
-        <audio src="sounds/fort-maiame.mp3"></audio>
-        <div class="button-caption">MAMA CORTASTE TODA LA LOOZ</div>
+        <audio src="sounds/fort/manejo-un-rolls-royce.mp3"></audio>
+        <div class="button-caption">YO NO MANEJO EL RATING, YO MANEJO UN ROLLS ROYCE</div>
       </div>
 
       <div class="button-container">
         <div class="button"></div>
-        <audio src="sounds/fort-maiame.mp3"></audio>
-        <div class="button-caption">MAIAMEE</div>
-      </div>
-
-      <div class="button-container">
-        <div class="button"></div>
-        <audio src="sounds/fort-maiame.mp3"></audio>
-        <div class="button-caption">MAMA CORTASTE TODA LA LOOZ</div>
-      </div>
-
-      <div class="button-container">
-        <div class="button"></div>
-        <audio src="sounds/fort-maiame.mp3"></audio>
-        <div class="button-caption">MAIAMEE</div>
-      </div>
-
-      <div class="button-container">
-        <div class="button"></div>
-        <audio src="sounds/fort-maiame.mp3"></audio>
-        <div class="button-caption">MAMA CORTASTE TODA LA LOOZ</div>
-      </div>
-
-      <div class="button-container">
-        <div class="button"></div>
-        <audio src="sounds/fort-maiame.mp3"></audio>
-        <div class="button-caption">MAIAMEE</div>
-      </div>
-
-      <div class="button-container">
-        <div class="button"></div>
-        <audio src="sounds/fort-maiame.mp3"></audio>
-        <div class="button-caption">MAMA CORTASTE TODA LA LOOZ</div>
+        <audio src="sounds/fort/basta-chicos.mp3"></audio>
+        <div class="button-caption">BASTA CHICOS</div>
       </div>
 
   </main>
