--- a/ricardo-vive/index.html
+++ b/ricardo-vive/index.html
@@ -3,6 +3,17 @@
   <head>
     <link rel="stylesheet" href="styles.css"/>
     <meta charset="utf-8"/>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-124818383-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-124818383-1');
+    </script>
+
   </head>
   <body>
     <main>
