--- a/minesweeper/index.html
+++ b/minesweeper/index.html
@@ -3,6 +3,12 @@
         <meta charset="UTF-8">
     </head>
     <body>
+        <div>
+            Numero de filas: <input type="text" id="inputRows">
+            Numero de columnas: <input type="text" id="inputCols">
+            Cantidad de minas: <input type="text" id="inputMines">
+            <button type="button" id="btnGenerate">Generar</button>
+        </div>
         <style>
             *{
                 padding: 0;
