--- a/minesweeper/index.html
+++ b/minesweeper/index.html
@@ -14,6 +14,12 @@
                 padding: 0;
                 margin: 0;
             }
+
+            #id{
+                user-select: none;
+                -moz-user-select: none;
+                -webkit-user-select: none;
+            }
         </style>
         <canvas id="canvas"></canvas>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js"></script>
