--- a/minesweeper/index.html
+++ b/minesweeper/index.html
@@ -49,8 +49,7 @@
             }
         </style>
         <div class="container">
-
-            <div class="control">
+            <div class="control unselectable">
                 <div class="buttons"> 
                     <span class="buttonLabel">Numero de filas: </span><input type="text" id="inputRows" class="unselectable">
                 </div>
