--- a/minesweeper/index.html
+++ b/minesweeper/index.html
@@ -51,15 +51,15 @@
         <div class="container">
             <div class="control unselectable">
                 <div class="buttons"> 
-                    <span class="buttonLabel">Numero de filas: </span><input type="text" id="inputRows" class="unselectable">
+                    <span class="buttonLabel">Numero de filas: </span><input type="text" id="inputRows" class="unselectable" onClick="this.select();">
                 </div>
     
                 <div class="buttons">
-                        <span class="buttonLabel">Numero de columnas: </span><input type="text" id="inputCols" class="unselectable">
+                        <span class="buttonLabel">Numero de columnas: </span><input type="text" id="inputCols" class="unselectable" onClick="this.select();">
                 </div>
     
                 <div class="buttons">
-                        <span class="buttonLabel">Cantidad de minas: </span><input type="text" id="inputMines" class="unselectable">
+                        <span class="buttonLabel">Cantidad de minas: </span><input type="text" id="inputMines" class="unselectable" onClick="this.select();">
                 </div>
                 <button type="button" id="btnGenerate" class="unselectable"><span>Generar</span></button>
             </div>
