--- a/BarreBot/index.html
+++ b/BarreBot/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <title>Barrebot</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.dom.min.js"></script>
     <link rel="stylesheet" type="text/css" href="styles.css">
@@ -16,8 +17,10 @@
 
       </div>
       <div class="container-button">
-        <input type="text" id="order"></textfield>
+        <input type="text" id="order" placeholder="7 "></textfield>
         <button id="submit-order" type="button">Enviar Orden</button>
+      </div>
+      <div id="container-tweets">
 
       </div>
     </section>
